--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
     </article>
     </article>
 
+    <!-- changed from h2 to h4 -->
     <footer class="footer">
         <h4>Made with ❤️️ by Horiseon</h4>
         <p>
